add images planet and update title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Космос</title>
+    <title>Космос - Галактика "Млечный путь"</title>
     <link rel="icon" href="./assets/favicon.ico" />
     <link rel="stylesheet" href="./styles.css" />
   </head>
@@ -11,10 +11,12 @@
     <div class="background"></div>
     <div class="container">
       <div class="card">
+        <img src="./assets/mercury.png" alt="Меркурий" class="planet-image" />
         <h2>Меркурий</h2>
         <p>Самая близкая к Солнцу планета. Поверхность покрыта кратерами.</p>
       </div>
       <div class="card">
+        <img src="./assets/venera.png" alt="Венера" class="planet-image" />
         <h2>Венера</h2>
         <p>
           Вторая планета от Солнца. Имеет плотную атмосферу и высокую
@@ -22,30 +24,36 @@
         </p>
       </div>
       <div class="card">
+        <img src="./assets/earth.png" alt="Земля" class="planet-image" />
         <h2>Земля</h2>
         <p>
           Третья планета от Солнца. Единственная известная планета с жизнью.
         </p>
       </div>
       <div class="card">
+        <img src="./assets/mars.png" alt="Марс" class="planet-image" />
         <h2>Марс</h2>
         <p>Четвёртая планета от Солнца. Красная планета с пыльными бурями.</p>
       </div>
       <div class="card">
+        <img src="./assets/upiter.png" alt="Юпитер" class="planet-image" />
         <h2>Юпитер</h2>
         <p>
           Пятая и самая крупная планета. Газовый гигант с сильными штормами.
         </p>
       </div>
       <div class="card">
+        <img src="./assets/saturn.png" alt="Сатурн" class="planet-image" />
         <h2>Сатурн</h2>
         <p>Известен своими величественными кольцами. Газовый гигант.</p>
       </div>
       <div class="card">
+        <img src="./assets/uran.png" alt="Уран" class="planet-image" />
         <h2>Уран</h2>
         <p>Седьмая планета. Имеет ледяную атмосферу и вращается "на боку".</p>
       </div>
       <div class="card">
+        <img src="./assets/neptun.png" alt="Нептун" class="planet-image" />
         <h2>Нептун</h2>
         <p>Восьмая и самая дальняя планета. Холодный ледяной гигант.</p>
       </div>
